Update of report files, and added todo

--- a/report/design.tex
+++ b/report/design.tex
@@ -1,4 +1,7 @@
 \section{Design}
+% Christoffer
+% Typical insert update delete statements (somewhere in Design)
+
 
 % Design coices 
 % See notes on hand drawn ER diagram (marked by *)
