Started writing the implementation and analysis chapters

--- a/report/analysis.tex
+++ b/report/analysis.tex
@@ -1,3 +1,15 @@
 \section{Analysis}
 % Include this section if the database does not conform to the 3'rd normal form
 % Section describes how 3'rd normal form was achieved
+This section deals with the analysis of the design. In particular whether it is 
+in conformance with the normal forms, and if not, how the normalizations were 
+achieved. 
+
+
+\subsection{First Normal Form}
+
+
+\subsection{Second Normal Form}
+
+
+\subsection{Third Normal Form}
