added handwritten ER diagram

--- a/report/design.tex
+++ b/report/design.tex
@@ -14,7 +14,7 @@
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=.2\textwidth]{img/DTU-logo} % Temporary image
+   \includegraphics[angle=90,origin=c,width=.4\textwidth]{img/Handwritten_ER} % Temporary image
     \caption{An ER diagram depiction the design of the database}
     \label{fig:ER}
 \end{figure}
