commit in order to pull

--- a/report/design.tex
+++ b/report/design.tex
@@ -14,7 +14,9 @@ That is, 'Station' can be seen as the relation containing vertices, and 'Track' 
 The other relations like 'Train', 'Employees' and 'Shift' are not really key parts of our database functionality, but are relations that should be included none the less.
 
 \subsection{'Hand drawn' ER diagram}
-On figure 1 on the next page is shown our "Hand drawn" ER diagram, which illustrates how we originally imagined the design of our 'Train Management' schema.\\
+On figure 1 on the next page is shown our "Hand drawn" ER diagram, which 
+illustrates how we originally imagined the design of our 'Train Management' 
+schema.\\
 It shows how there is total participation between some of our "graph" relations, as you can not have tracks/edges exist without vertices (Station/City), neither can you have routes without tracks.
 
 
