--- a/report/main.tex
+++ b/report/main.tex
@@ -10,6 +10,7 @@
 \usepackage{pifont}
 \usepackage{setspace}
 \usepackage{tikz}
+\usepackage{todonotes}
 \usepackage{mathptmx}
 \usepackage{setspace}
 \usepackage{titlesec}
@@ -61,7 +62,7 @@
 	
 	\include{intro}
 	\include{design}
-%    \include{analysis}
+%    \include{analysis} 
 	\include{implementation}
     \include{conclusion}
     
