--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -4,6 +4,13 @@
 % Discussion paragraphs first (if any)
 
 % Comment on final result
+The goal of the project was to generate a functioning database train 
+management. We did this by first designing the database as en Entity Relation 
+diagram. Once the diagram was finished it was translated into the MySQL EER 
+diagram. However, at this point we realised flaws in the initial design, and an 
+iterative process thereby began. One entity or relation was translated possibly 
+redesigned translated again. Only once we were satisfied we moved on to the 
+next relation/entity
 % Does the implementation follow the design (YES - generated from "sketch")
 % Where does it not? Why?
 % Comments on work -process, -flow, and possibly -distribution
