Major changes to report structure. Programming.tex and design.tex needs work

--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -26,4 +26,13 @@ programming functionality.
 % Mentioned briefly above
 
 % Future expansions?
-
+If we were to further develop the database, there are several aspects that 
+could be improved. First of all we have only dealt with the actual database. 
+There exists no presentation layer. A nice extension would therefore be to 
+build a front end for the database. The database also suffers from being a 
+local instance. For the database to actually be used to manage trains, it would 
+need to be accessible for many people possibly at various locations. It would 
+therefore need to be accessible online. However, staying with database 
+improvements a natural progression of the project would be to look into 
+timeslots. The trains arrive and leave stations at specific times on specific 
+days. Modelling this would be a natural extension to our database. 
