--- a/report/intro.tex
+++ b/report/intro.tex
@@ -2,11 +2,31 @@
 % Christoffer
 
 % Introduction to train management:
-The database system of this project is a train management schema, which stores trains, stations, tracks, routes, employees, etc. So a railway system that connects cities and stations is what we are modelling with our \emph{Train Management} scheme.\\
-This report will go through process of designing the database system, implementing it, the programming, and using it.\\[12pt]
-The functionality of this databse system is to store important stuff about a railway system, like routes and tracks between cities and stations. With the relations in this \emph{Train Management} scheme it is possible to plan a route from, for example, station A to station B and calculate the shortest route to reach the destination.\\ However, these more advanced algorithms, \textit{"Breadth-first search"} and \textit{"Dijkstra's Shortest Path"}, to plan routes and calculate shortest paths, are not implemented or stored as procedures in this schema, as they are tough to implement with our current SQL programming knowledge.
-The \emph{Train Management} schema is however compatible with the implementation of these algorithm. So by using the correct queries on the relations it is definitely possible to retrieve the required information that these algorithms need, and they could then be implemented in another DBMS like ODBC or JDBC.\\[12pt]
-Database type*
+The database system of this project is a train management schema, which stores 
+trains, stations, tracks, routes, employees, etc. So a railway system that 
+connects cities and stations is what we are modelling with our \emph{Train 
+Management} schema.
+
+This report will go through process of designing the database system, 
+implementing it, the programming, and using it.
+The functionality of this databse system is to store important stuff about a 
+railway system, like routes and tracks between cities and stations. With the 
+relations in this \emph{Train Management} scheme it is possible to plan a route 
+from, for example, station A to station B and calculate the shortest route to 
+reach the destination.However, these more advanced algorithms, 
+\textit{"Breadth-first search"} and \textit{"Dijkstra's Shortest Path"}, to 
+plan routes and calculate shortest paths, are not implemented or stored as 
+procedures in this schema, as they are tough to implement with our current SQL 
+programming knowledge.
+The \emph{Train Management} schema is however compatible with the 
+implementation of these algorithm. So by using the correct queries on the 
+relations it is definitely possible to retrieve the required information that 
+these algorithms need, and they could then be implemented in another DBMS like 
+ODBC or JDBC.
+
+Database type* % <- What is this?
+
+
 % What is the purpose? 
 	%Describe part of real world to be modelled
 % What is this report about?
