--- a/report/main.tex
+++ b/report/main.tex
@@ -19,41 +19,7 @@
 
 \pagestyle{plain}
 
-% titlesec
-%\renewcommand\thechapter{\Roman{chapter}}
-%\renewcommand\thesection{\arabic{chapter}.\arabic{section}}
-%\renewcommand\thefigure{\arabic{chapter}.\arabic{figure}}
-%\titleformat{\chapter}[display]
-%  {\scshape\huge\bfseries}
-%  {\filleft{Part} \thechapter}
-%  {2ex}
-%  {\filright\Huge\normalfont\bfseries}
-
-% tikz
-%\usetikzlibrary{automata,positioning,arrows}
-
-% hyperref
-%\hypersetup{
-%	colorlinks=false,
-%	pdfborder={0 0 0},
-%	breaklinks=true
-%}
-%
-%\definecolor{R} {rgb} {.75,.15,.1}
-%\definecolor{G} {rgb} {.1,.75,.4}
-%\definecolor{B} {rgb} {.1,.3,.75}
-%\definecolor{Y} {rgb} {.75,.75,.1}
-%\definecolor{P} {rgb} {.5,.1,.75}
-%\definecolor{O} {rgb} {.8,0.45,0}
-
-%\graphicspath{./img/}
-
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
-%
-%\newcommand{\cmark}{\ding{51}}%
-%\newcommand{\xmark}{\ding{55}}%
-%\newcommand{\specialcell}[2][c]{%
-%	\begin{tabular}[#1]{@{}c@{}}#2\end{tabular}}
 
 \begin{document}
 	\include{titlepage}
@@ -62,8 +28,8 @@
 	
 	\include{intro}
 	\include{design}
-%    \include{analysis} 
 	\include{implementation}
+    \include{programming}
     \include{conclusion}
     
     \appendix
